In balance chart synchronize minimum balance with balance drawing

BUG:513187
FIXED-IN:5.2.2